# DI

./: Clases.py  coleccions.py  funciones.py  pruebas.py
AccesoBD/: accesoBD.py
ExemplosListasIntercambiables/: Interfaz.py  ModeloTabla.py
ExerPY/: Exercicio 3.1.py  Exercicio 7.1.py  Readme.md
ExercicioInterfaz/: ExemploInterfazGrid.py  Interfaz.py  ModeloLista.py
PYQT/: DB.py  Grid.py  PrimeraVentana.py  SegundaVentana.py  VentanaBaseDatos.py  VentanaHija.py  VentanaSecreta.py  ejemploGrid.py
PYQT/EjemploExamen/: examen.py  examen2.py
Paquetado/: README.md  lanzador  main.py  pyproject.toml
Paquetado/empaquetado_Samuel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Paquetado/fontes/paquete_exemplo_Samuel/: MatOperacion.py  main.py
Pruebaexamen/: Boletin2_1.py  InterfazExamen.py  Prueba_Layout.py  Readme.md  buttomGroupComplejo.py
Pruebaexamen/aklfha/: p1.py  safn.py
Pruebaexamen/tableComplejo/: tableComplejo.py
Pruebas/: pruebas.py  pruebas2.py  pruebas3.py
Random/: Clases.py  Decoradores.py  coleccions.py
Random/Examen260126/: __init__.py  bdTendaOrdeadoresBig.bd  correcion.py
Random/Pdf/Documentacion/: README.md
Random/Sphinx/@Documentacion/: api_reference.rst  conf.py
Sphinx/: Readme.md  setup.py
Sphinx/docs/source/: api.rst  conf.py  ejemplo_rst.rst  operacionesMatematicas.rst
Sphinx/ejemplo_distro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gtk/: PrimeraVentana.py  SegundaVentana.py  VentanaHija.py  VentanaPadre.py  VentanaSecreta.py  gtk.py
modulos/: empaquetado.py  nuevoModulo.py
(+54 files in other folders)
